added edits from 2nd day

--- a/slides/02-basic_text_wrangling_functions.html
+++ b/slides/02-basic_text_wrangling_functions.html
@@ -1305,7 +1305,7 @@ Hauke Licht
 <dl class="code-annotation-container-hidden code-annotation-container-grid">
 <dt data-target-cell="annotated-cell-5" data-target-annotation="1">1</dt>
 <dd>
-<span data-code-lines="2" data-code-cell="annotated-cell-5" data-code-annotation="1"><code>typeof()</code> returns the type of the vector</span>
+<span data-code-cell="annotated-cell-5" data-code-lines="2" data-code-annotation="1"><code>typeof()</code> returns the type of the vector</span>
 </dd>
 </dl>
 </div>
